Fix styling of elements (alignment and position)

--- a/Website/sitecore modules/Shell/robhabraken/SitecoreShrink/shrink.css
+++ b/Website/sitecore modules/Shell/robhabraken/SitecoreShrink/shrink.css
@@ -2,13 +2,22 @@ body {
   font-family: Arial, sans-serif;
   font-size: 12px;
   background-color: #f0f0f0;
-  margin: 0;
+  margin: auto;
+  position: relative;
+  width: 1405px;
 }
 
 #main-canvas {
-  margin: auto;
-  position: relative;
-  width: 960px;
+}
+
+#left-canvas, #right-canvas {
+  float: left;
+  overflow: hidden;
+  padding-bottom: 15px;
+}
+
+#left-canvas {
+  width: 795px;
 }
 
 .chart-panel {
@@ -53,5 +62,6 @@ body {
 }
 
 .tree-view {
+  height: 876px;
   width: 580px;
 }
